2010-04-05
- New raster painter architecture that performs better in both modes - singlethreaded
  and multithreaded. See diff, there was really a lot of work.
- Painter now supports meta matrix (addition to meta region) that is base matrix for
  all transformations and can't be reset by resetMatrix() or setMatrix() methods.
- Some work on clipping, but not finished yet.

2010-04-03
- Renamed Class::sharedNull to Class::_dnull. Now all 'd' statics will start at '_d'.
- Removed Region::operation(), added Region::combine() for all ops.
- Region now supports infinite regions, use Region::infinite() to get it.
- All operations with INFINITE regions are supported in Region API.
- Cleaned up mess with META and USER variables (region + origin) in PaintEngine and Painter,
  now there are strict rules (META variables are for whole painting and user variables can
  be temporary and setting / resetting them will not destroy or damage current clipping area).
- Instead of USER variables just use clip().
- Painter::clear() renamed to Painter::fillAll().

2010-04-02
- Added more ROI (rectange of interest) methods in Image and Painter.
- Added Painter::switchTo() so now it's efficient to switch singlethreaded or 
  multithreaded painting to different image or buffer.

2010-04-01
- Removed RegionPoly.cpp / RegionRound.cpp, now it's only used Region::path().
- Fixed few bugs related to Image::glyphFromRegion.
- Some work on fonts (still incomplete).

2010-03-31
- Bunch or refactorization (IntRect, IntPoint, FloatRect, FloatPoint, ...)
- Fonts reworked again, adding more to the font face, removing FontData and
  keeping only FontFace, need a lot of more work to be usable.

2010-03-27
- Implemented path to image - Fog::Image::makeFromPath().

2010-03-26
- Added support for ARGB32 pixel format in Painter.
- Refactorized RasterEngine file names.
- Small raster bugfix related to PRGB32 SRC_OVER ARGB32 blitter.
- Added Fog::Dpi class

2010-03-05